--- a/thesis/content/chapter-simulation.tex
+++ b/thesis/content/chapter-simulation.tex
@@ -1,9 +1,34 @@
 \chapter{Simulation Experiments}
 
-In this section, the tasks used in simulation experiments and the results are presented. 
+Knowing that real-robot experiments are expensive and error-prone, we developed a simulation in Mujoco as a test bed for our algorithms. The tasks used for evaluation are introduced, and the results are presented and discussed. 
 
 \section{Tasks}
 
-The first environment is a door in a hallway. For the first task, the robot needs to grab the handle, turn it, and push the door open. The second task is a loco-manipulation task, where the robot needs to walk forward and push the door open. 
+The first environment is a door in a hallway. It contains two tasks: opening the door and walking through the door. For the first task, the robot needs to grab the handle, turn it, and push the door open. Partial success is defined by the robot grasping the handle. The second task is a loco-manipulation task, where the robot needs to walk forward while pushing the door open. Partial success is given if the robot opens the door but doesn't walk through it. The initial pose of the robot is randomized for both tasks. 
 
-The second environment is a kitchen. 
+The second environment is a kitchen containing tasks for moving a pot and placing a lid. The first task requires the robot to lift up a pot with two hands, walk a step towards a stove, and put the pot on the stove. Partial success is granted for lifting the pot. For the second task, the robot should grab the lid next to the pot and put it on the pot. Grasping the lid constitutes a partial success. The positions of the pot, stove, and lid are randomized along with the initial pose of the robot. 
+
+We collected 200 demonstrations for each of the 4 tasks. The neural network architecture and training are identical to those introduced in Chapter 4. 
+
+\section{Results}
+
+The evaluation results for each task is presented in Table \ref{table:results}
+
+\begin{table}[h]
+	\centering
+	\begin{tabular}{|c|c|c|c|}
+		\hline
+		& Success & Partial success & Fail\\
+		\hline
+		Open door & 80\% & 13 \% & 7\% \\
+		\hline
+		Walk through door & 74 \% & 13\% & 13\%\\
+		\hline
+		Moving pot & 8 \% & 53 \% & 40\%\\
+		\hline
+		Move lid & 8 \% & 53 \% & 40 \%\\
+		\hline
+	\end{tabular}
+	\caption{The evaluation success rate on the 4 simulation tasks.}
+	\label{table:results}
+\end{table}
